2004/01/16 18:35 (-0500) rwmcfa1

	* xs/GdkEvents.xs: implemented setters for most everything and getter's
	for most everything that didn't have them. rest are TODO/FIXME'd.

	* t/GdkEvent.t: initial import, test all of the above implementations,
	pretty thorough.

2004/01/16 11:14 (-0500) rwmcfa1

	* Makefile.PL: use the new BLIB_DONE var as a dep of the things that 
	need to know that blib has the .so's. (see Glib commit at same time)
	fixes problems with -j make options. 

2004/01/16 02:00 (-0500) muppetman

	release 1.030 (unstable)

2004/01/16 01:54 (-0500) muppetman

	* t/GdkDnd.t: this test fails rather insistently on my system;
	disabling it with loud FIXMEs so we can make a release.

2004/01/16 00:53 (-0500) muppetman

	* AUTHORS, TODO: updated

	* Makefile.PL, README: update requirements to Glib-1.030 and
	emphasize that this is an unstable series.

2004/01/15 14:37 (-0500) muppetman

	* t/GtkTextView.t: allow negative numbers when testing returns from
	buffer_to_window_ccords.

	* xs/GtkIconFactory.xs: remove return values from call signature of
	lookup_for_settings

	* xs/GtkImage.xs: allow null filename to new_from_file and
	set_from_file, as documented in C API ref

	* xs/GtkTreeView.xs: use XS comments to hide commented-out function
	from ParseXSDoc (supress "missing" warnings)

	* xs/GtkList.xs, xs/GtkRc.xs, xs/GtkWidget.xs, xs/GtkWindow.xs:
	give types to faked args to hush warnings from podify

2004/01/15 18:55 (+0100) kaffeetisch

	A t/GdkDnd.t
	A t/GtkObject.t
	A t/GtkTextView.t
	* MANIFEST: Initial import.

	A t/GtkTextChildAnchor.t
	A xs/GtkTextChildAnchor.xs
	* MANIFEST
	* xs_files-2.0: Initial implementation and test.

	* xs/GtkTextView.xs: Fix get_line_at_y, use _own for the return
	value of get_tabs and get_default_attributes.

	* xs/GdkDnd.xs: Use appropriate PREFIX for gdk_drop_reply and
	gdk_drop_finish.

2004/01/14 21:29 (-0500) muppetman

	* xs/GdkPixbuf.xs: we don't care about unregistered subclasses of
	GdkPixbufAnimation.
