@@ -80,6 +80,7 @@ t/01.GtkWindow.t
 t/02.GtkContainer.t
 t/GdkColor.t
 t/GdkDnd.t
+t/GdkEvent.t
 t/GdkRegion.t
 t/GdkWindow.t
 t/GtkAccelGroup.t
@@ -156,10 +157,15 @@ t/GtkSocket-GtkPlug.t
 t/GtkSpinButton.t
 t/GtkStatusBar.t
 t/GtkStock.t
+t/GtkStyle.t
 t/GtkTable.t
 t/GtkTearoffMenuItem.t
+t/GtkTextBuffer.t
 t/GtkTextChildAnchor.t
 t/GtkTextIter.t
+t/GtkTextMark.t
+t/GtkTextTag.t
+t/GtkTextTagTable.t
 t/GtkTextView.t
 t/GtkToggleButton.t
 t/GtkToolbar.t
